force-app/main/default/objects/Master_Task_List__c/Master_Task_List__c.object-meta.xml
<CustomObject>
    <label>Master Task List</label>
    <nameField>
        <label>Master Task List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Task Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>