force-app/main/default/objects/Master_Task_List__c/fields/avo_Legacy_Name__c.field-meta.xml
<CustomField>
    <fullName>avo_Legacy_Name__c</fullName>
    <label>Legacy Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>