force-app/main/default/objects/Master_Task_List__c/fields/Legacy_Description__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Description__c</fullName>
    <label>Legacy Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>