force-app/main/default/objects/Master_Task_List__c/fields/Legacy_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Number__c</fullName>
    <label>Legacy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>