force-app/main/default/objects/Master_Task_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Avo_Permit_Type__c</columns>
    <columns>Effective_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>