force-app/main/default/objects/Master_Task_List__c/listViews/All_Tasks.listView-meta.xml
<ListView>
    <fullName>All_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Avo_Permit_Type__c</columns>
    <columns>Avo_Planning_Application_Type__c</columns>
    <columns>Owner_Queue_User__c</columns>
    <columns>Description__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Tasks</label>
</ListView>